fix: use tailwindcss-rem-to-px to align Tailwind with Dawn theme without disrupting existing styles.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -501,18 +501,15 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
-.tw-text-center {
-  text-align: center;
+.tw-text-4xl {
+  font-size: 36px;
+  line-height: 40px;
 }
-.tw-text-5xl {
-  font-size: 3rem;
+.tw-text-8xl {
+  font-size: 96px;
   line-height: 1;
 }
-.tw-text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.tw-text-blue-500 {
+.tw-text-red-400 {
   --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
